2005-09-29  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(getLeftChildIndent): Fixed method signature.
	(drawCentered): Fixed method signature.

2005-09-29  Tom Tromey  <tromey@redhat.com>

	PR classpath/23381:
	* java/beans/PropertyDescriptor.java (hashCode): New method.

2005-09-29  Roman Kennke  <kennke@aicas.com>

	* javax/swing/OverlayLayout.java: Added API docs all over.

2005-09-29  David Gilbert  <david.gilbert@object-refinery.com>

	* examples/gnu/classpath/examples/swing/ButtonDemo.java
	(createContent): add a close button,
	(actionPerformed): perform close action,
	* examples/gnu/classpath/examples/swing/ComboBoxDemo.java
	(createContent): add a close button,
	(actionPerformed): perform close action.

2005-09-29  Roman Kennke  <kennke@aicas.com>

	* javax/swing/SizeRequirements.java
	(getAlignedSizeRequirements): Fixed calculation of preferred and
	maximum size as well as the alignment.

2005-09-29  Roman Kennke  <kennke@aicas.com>

	Fixes Bug #23851
	* javax/swing/OverlayLayout.java
	(OverlayLayout): Implemented.
	(invalidateLayout): Implemented.
	(addLayoutComponent(Component, Object)): Implemented.
	(addLayoutComponent(String, Component)): Implemented.
	(removeLayoutComponent): Implemented.
	(preferredLayoutSize): Implemented.
	(minimumLayoutSize): Implemented.
	(maximumLayoutSize): Implemented.
	(getLayoutAlignmentX): Implemented.
	(getLayoutAlignmentY): Implemented.
	(layoutContainer): Implemented.
	(checkRequirements): New private helper method.
	(checkTotalRequirements): New private helper method.
	(checkLayout): New private helper method.

2005-09-29  David Gilbert  <david.gilbert@object-refinery.com>

	* examples/gnu/classpath/examples/swing/ComboBoxDemo.java: new demo.

2005-09-29  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* java/awt/print/PrinterJob.java
	(print(PrintRequestAttributeSet)): Remove abstract modifier and
	implement.

2005-09-29  David Gilbert  <david.gilbert@object-refinery.com>
