@@ -1,5 +1,11 @@
 2005-09-29  Roman Kennke  <kennke@aicas.com>
 
+	* javax/swing/plaf/basic/BasicTableUI.java
+	(KeyHandler): New inner class.
+	(createKeyListener): New method.
+
+2005-09-29  Roman Kennke  <kennke@aicas.com>
+
 	* javax/swing/plaf/basic/BasicTreeUI.java
 	(getLeftChildIndent): Fixed method signature.
 	(drawCentered): Fixed method signature.
